# opensearch-mcp

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.override.yml  docker-compose.yml
scripts/: setup-opensearch.sh
src/opensearch_mcp/: __init__.py  __main__.py  bulk.py  client.py  containers.py  discover.py  gateway.py  host_dictionary.py  host_discovery.py  hostname.py  http_server.py  ingest.py  ingest_cli.py  ingest_status.py  manifest.py  normalize.py  parse_accesslog.py  parse_csv.py  parse_defender.py  parse_delimited.py  parse_evtx.py  parse_json.py  parse_memory.py  parse_plaso.py  parse_prefetch.py  parse_srum.py  parse_ssh.py  parse_tasks.py  parse_transcripts.py  parse_w3c.py  parse_wer.py  paths.py  (+9 more)
tests/: _helpers.py  conftest.py  generate_test_data.py  test_all_parsers.py  test_coerce_scalars.py  test_containers.py  test_detections.py  test_discover.py  test_edge_cases.py  test_exhaustive_live.py  test_host_dictionary.py  test_host_identity_wiring.py  test_hostname.py  test_ingest.py  test_ingest_cli.py  test_ingest_integration.py  test_ingest_manifest.py  test_ingest_status.py  test_intel_rate_limit.py  test_json_type_stability.py  test_live_containers.py  test_manifest.py  test_normalize.py  test_parse_csv.py  test_parse_delimited_detect.py  test_parse_json.py  test_parse_memory_tiers.py  test_phase3_cli.py  test_phase3_ingest.py  test_phase4_config.py  test_phase4_template.py  test_preflight_coverage.py  test_security.py  test_server_tools.py  test_tools.py  test_triage_remote.py  test_vhir_plugin.py  test_winlog_pipeline.py
(+17 files in other folders)
